# self-instruct

./: pyproject.toml
test/data/: NotRealCorp_financial_data.json
test/phi-3/: analyze_data.py  analyze_data_gguf.py  analyze_data_onnx.py  model-generate.py  phi3-qa.py  starter.py
